--- a/Strain_Boston_Housing.ipynb
+++ b/Strain_Boston_Housing.ipynb
@@ -1266,12 +1266,36 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MCDgin2rYWUJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "The variables tax and rad are highly correlated (0.91) so only one of them should be used in the regression - OR\n",
+        "we can try an interaction term with them. Let's look at that in the modeling phase."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "56NDZb30uwkC",
         "colab_type": "text"
       },
       "source": [
         "## Modeling"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sHONXJRLYic0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
