--- a/Strain_Boston_Housing.ipynb
+++ b/Strain_Boston_Housing.ipynb
@@ -53,7 +53,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "\n",
-        "# initial work with the smaller data set\n",
+        "# read data from github\n",
         "df = pd.read_csv('https://raw.githubusercontent.com/bstrain71/422_boston_housing/master/boston.csv')\n",
         "\n",
         "\n",
@@ -755,6 +755,29 @@
           "execution_count": 209
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1nKb1zQ51s2a",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Don't forget to code an interaction variable for tax and rad!!!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oKglQdzY1slr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
