--- a/Strain_Boston_Housing.ipynb
+++ b/Strain_Boston_Housing.ipynb
@@ -80,11 +80,11 @@
       "metadata": {
         "id": "eDK2pDmEGBVY",
         "colab_type": "code",
+        "outputId": "34ba83a6-55fe-4a16-ca75-8819ed40067d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 319
-        },
-        "outputId": "34ba83a6-55fe-4a16-ca75-8819ed40067d"
+        }
       },
       "source": [
         "# i would like to predict the natural log vice the actual values\n",
@@ -94,7 +94,7 @@
         "print(df.shape)\n",
         "df.describe()"
       ],
-      "execution_count": 177,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,11 +299,11 @@
       "metadata": {
         "id": "BX2T1XiEUcae",
         "colab_type": "code",
+        "outputId": "6a2fd77f-a8c0-4b2b-b367-055ace7e1996",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        },
-        "outputId": "6a2fd77f-a8c0-4b2b-b367-055ace7e1996"
+        }
       },
       "source": [
         "# preprocess the data - scale everything to zero mean and unit variance\n",
@@ -318,7 +318,7 @@
         "\n",
         "df.describe()"
       ],
-      "execution_count": 178,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,11 +516,11 @@
       "metadata": {
         "id": "PIrFiralG2GL",
         "colab_type": "code",
+        "outputId": "c8216323-14ff-4221-cc86-1ced3c7ef4da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 758
-        },
-        "outputId": "c8216323-14ff-4221-cc86-1ced3c7ef4da"
+        }
       },
       "source": [
         "# correlations with mv - the response variable\n",
@@ -533,7 +533,7 @@
         "            cmap='coolwarm',\n",
         "            annot=True);"
       ],
-      "execution_count": 179,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -554,11 +554,11 @@
       "metadata": {
         "id": "jUe8g6sDPW8g",
         "colab_type": "code",
+        "outputId": "c867ab6f-7e15-405a-95c0-bc09c269fdfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "c867ab6f-7e15-405a-95c0-bc09c269fdfd"
+        }
       },
       "source": [
         "# correlation matrix with the top contenders for good predictive variables\n",
@@ -578,7 +578,7 @@
         "    horizontalalignment='right'\n",
         ");\n"
       ],
-      "execution_count": 180,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -620,11 +620,11 @@
       "metadata": {
         "id": "B9aimC5UzZZd",
         "colab_type": "code",
+        "outputId": "bdce240f-32b4-47cb-c7d5-58b8e7a4ca0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "bdce240f-32b4-47cb-c7d5-58b8e7a4ca0c"
+        }
       },
       "source": [
         "mvp_df = df[['mv','lstat','tax','indus','crim','nox',\n",
@@ -632,7 +632,7 @@
         "\n",
         "mvp_df.loc[:,:].head()"
       ],
-      "execution_count": 209,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,11 +784,11 @@
       "metadata": {
         "id": "sHONXJRLYic0",
         "colab_type": "code",
+        "outputId": "852d7644-327c-44bc-b78a-bdc22057e94d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        },
-        "outputId": "852d7644-327c-44bc-b78a-bdc22057e94d"
+        }
       },
       "source": [
         "mvp_df = df[['mv','lstat','tax','indus','crim','nox',\n",
@@ -806,7 +806,7 @@
         "ridge_predictions = pd.DataFrame(ridge.predict(X_test))\n",
         "ridge_predictions.describe()"
       ],
-      "execution_count": 212,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,6 +896,29 @@
           "execution_count": 212
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W9MKcua-9VOX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Attempting to include an interaction variable: tax * rad: but first check to see if either of them are Nelder's \"special points\" (Nelder, J.A., The selection of terms in response-surface models - How strong is the weak-heredity principle? *The American Statistician*, 52, 315, 1998.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QRYYqP8_9N3J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
