--- a/Strain_Boston_Housing.ipynb
+++ b/Strain_Boston_Housing.ipynb
@@ -50,7 +50,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "\n",
         "\n",
         "# read data from github\n",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "eDK2pDmEGBVY",
         "colab_type": "code",
-        "outputId": "34ba83a6-55fe-4a16-ca75-8819ed40067d",
+        "outputId": "23448d5f-9119-4e03-85f9-4b38b1f08acf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 319
@@ -290,7 +290,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 177
+          "execution_count": 19
         }
       ]
     },
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "BX2T1XiEUcae",
         "colab_type": "code",
-        "outputId": "6a2fd77f-a8c0-4b2b-b367-055ace7e1996",
+        "outputId": "bafed4c8-9629-4dbc-a8b7-fc05ec5768da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
@@ -507,7 +507,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 178
+          "execution_count": 20
         }
       ]
     },
@@ -516,7 +516,7 @@
       "metadata": {
         "id": "PIrFiralG2GL",
         "colab_type": "code",
-        "outputId": "c8216323-14ff-4221-cc86-1ced3c7ef4da",
+        "outputId": "c0592f8d-dd4c-49b5-acf0-9ecc2e23b61d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 758
@@ -525,6 +525,9 @@
       "source": [
         "# correlations with mv - the response variable\n",
         "# my personal cutoff is |0.4|\n",
+        "corr = df.corr()\n",
+        "\n",
+        "\n",
         "\n",
         "plt.figure(figsize=(13,13))\n",
         "sns.heatmap(corr[['mv']].\n",
@@ -554,7 +557,7 @@
       "metadata": {
         "id": "jUe8g6sDPW8g",
         "colab_type": "code",
-        "outputId": "c867ab6f-7e15-405a-95c0-bc09c269fdfd",
+        "outputId": "d024ffea-19ce-43d2-e897-c8a57dbfaffd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -620,7 +623,7 @@
       "metadata": {
         "id": "B9aimC5UzZZd",
         "colab_type": "code",
-        "outputId": "bdce240f-32b4-47cb-c7d5-58b8e7a4ca0c",
+        "outputId": "4f96955e-67ff-48a8-99fa-c4308504c083",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -752,7 +755,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 209
+          "execution_count": 23
         }
       ]
     },
@@ -784,7 +787,7 @@
       "metadata": {
         "id": "sHONXJRLYic0",
         "colab_type": "code",
-        "outputId": "852d7644-327c-44bc-b78a-bdc22057e94d",
+        "outputId": "fa3cdd4c-cac5-473b-9f9a-8adde0634223",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
@@ -796,15 +799,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "  mvp_df.loc[:,'lstat':], mvp_df.loc[:,'mv'],\n",
-        "    random_state=24601)\n",
-        "\n",
-        "\n",
-        "ridge = LinearRegression().fit(X_train, y_train)\n",
-        "print(\"Training set score: {:.3f}\".format(ridge.score(X_train, y_train)))\n",
-        "print(\"Test set score: {:.3f}\".format(ridge.score(X_test, y_test)))\n",
-        "\n",
-        "ridge_predictions = pd.DataFrame(ridge.predict(X_test))\n",
-        "ridge_predictions.describe()"
+        "    random_state=24601)\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -893,7 +888,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 212
+          "execution_count": 24
         }
       ]
     },
@@ -904,7 +899,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Attempting to include an interaction variable: tax * rad: but first check to see if either of them are Nelder's \"special points\" (Nelder, J.A., The selection of terms in response-surface models - How strong is the weak-heredity principle? *The American Statistician*, 52, 315, 1998.)"
+        "Attempting to include an interaction variable: tax * rad: but first check to see if either of them are Nelder's \"special points\" (Nelder, J.A., The selection of terms in response-surface models - How strong is the weak-heredity principle? *The American Statistician*, 52, 315, 1998.) Basically this means set all tax to zero and if rad is not statisticall significant then you can remove rad from the model."
       ]
     },
     {
@@ -912,13 +907,240 @@
       "metadata": {
         "id": "QRYYqP8_9N3J",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "6e86e475-f4d8-43cb-ea19-7955bf1d3e87",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 660
+        }
       },
       "source": [
-        ""
+        "from sklearn import datasets, linear_model\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "import statsmodels.api as sm\n",
+        "from scipy import stats\n",
+        "\n",
+        "X = X_train\n",
+        "y = y_train\n",
+        "\n",
+        "X2 = sm.add_constant(X)\n",
+        "est = sm.OLS(y, X2)\n",
+        "est2 = est.fit()\n",
+        "print(est2.summary())"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                     mv   R-squared:                       0.772\n",
+            "Model:                            OLS   Adj. R-squared:                  0.766\n",
+            "Method:                 Least Squares   F-statistic:                     138.8\n",
+            "Date:                Fri, 04 Oct 2019   Prob (F-statistic):          1.12e-112\n",
+            "Time:                        13:45:13   Log-Likelihood:                 79.402\n",
+            "No. Observations:                 379   AIC:                            -138.8\n",
+            "Df Residuals:                     369   BIC:                            -99.43\n",
+            "Df Model:                           9                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const          3.0263      0.010    295.981      0.000       3.006       3.046\n",
+            "lstat         -0.2283      0.018    -12.425      0.000      -0.264      -0.192\n",
+            "tax           -0.1234      0.030     -4.147      0.000      -0.182      -0.065\n",
+            "indus          0.0356      0.019      1.841      0.066      -0.002       0.074\n",
+            "crim          -0.0920      0.015     -6.260      0.000      -0.121      -0.063\n",
+            "nox           -0.0590      0.020     -2.933      0.004      -0.099      -0.019\n",
+            "ptratio       -0.0857      0.013     -6.729      0.000      -0.111      -0.061\n",
+            "rad            0.1168      0.028      4.110      0.000       0.061       0.173\n",
+            "age            0.0497      0.017      2.916      0.004       0.016       0.083\n",
+            "rooms          0.0666      0.014      4.649      0.000       0.038       0.095\n",
+            "==============================================================================\n",
+            "Omnibus:                       70.728   Durbin-Watson:                   1.921\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              239.506\n",
+            "Skew:                           0.805   Prob(JB):                     9.81e-53\n",
+            "Kurtosis:                       6.546   Cond. No.                         8.71\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+            "  return ptp(axis=axis, out=out, **kwargs)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oSj47OtVBT4k",
+        "colab_type": "code",
+        "outputId": "d9ccbfab-9b7a-4030-bf50-642a3f1a716a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 899
+        }
+      },
+      "source": [
+        "X_train_zerotax = X_train\n",
+        "X_train_zerotax['tax'] = 0\n",
+        "\n",
+        "\n",
+        "X = X_train_zerotax\n",
+        "y = y_train\n",
+        "\n",
+        "X2 = sm.add_constant(X)\n",
+        "est = sm.OLS(y, X2)\n",
+        "est2 = est.fit()\n",
+        "print(est2.summary())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                     mv   R-squared:                       0.761\n",
+            "Model:                            OLS   Adj. R-squared:                  0.756\n",
+            "Method:                 Least Squares   F-statistic:                     147.5\n",
+            "Date:                Fri, 04 Oct 2019   Prob (F-statistic):          3.80e-110\n",
+            "Time:                        13:57:45   Log-Likelihood:                 70.771\n",
+            "No. Observations:                 379   AIC:                            -123.5\n",
+            "Df Residuals:                     370   BIC:                            -88.10\n",
+            "Df Model:                           8                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const          3.0259      0.010    289.684      0.000       3.005       3.046\n",
+            "lstat         -0.2324      0.019    -12.396      0.000      -0.269      -0.196\n",
+            "tax         2.411e-16    5.4e-18     44.632      0.000     2.3e-16    2.52e-16\n",
+            "indus          0.0056      0.018      0.307      0.759      -0.030       0.042\n",
+            "crim          -0.0917      0.015     -6.107      0.000      -0.121      -0.062\n",
+            "nox           -0.0616      0.021     -2.998      0.003      -0.102      -0.021\n",
+            "ptratio       -0.0864      0.013     -6.638      0.000      -0.112      -0.061\n",
+            "rad            0.0237      0.018      1.333      0.183      -0.011       0.059\n",
+            "age            0.0568      0.017      3.276      0.001       0.023       0.091\n",
+            "rooms          0.0698      0.015      4.782      0.000       0.041       0.099\n",
+            "2                   0          0        nan        nan           0           0\n",
+            "==============================================================================\n",
+            "Omnibus:                       61.361   Durbin-Watson:                   1.916\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              199.984\n",
+            "Skew:                           0.703   Prob(JB):                     3.75e-44\n",
+            "Kurtosis:                       6.269   Cond. No.                          inf\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The smallest eigenvalue is      0. This might indicate that there are\n",
+            "strong multicollinearity problems or that the design matrix is singular.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+            "  return ptp(axis=axis, out=out, **kwargs)\n",
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/regression/linear_model.py:1755: RuntimeWarning: divide by zero encountered in double_scalars\n",
+            "  return np.sqrt(eigvals[0]/eigvals[-1])\n",
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/base/model.py:1294: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  return self.params / self.bse\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in greater\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in less\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:1892: RuntimeWarning: invalid value encountered in less_equal\n",
+            "  cond2 = cond0 & (x <= _a)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DWjIcd4jEG6_",
+        "colab_type": "text"
+      },
+      "source": [
+        "When tax = zero then rad loses it's significance with the dependent variable, therefore it can be omitted from the model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Eb44UCYBEQNa",
+        "colab_type": "code",
+        "outputId": "4bad5f24-4eba-4f50-85ef-adf889dae4da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "source": [
+        "mvp_df = df[['mv','lstat','tax','indus','crim','nox',\n",
+        "             'ptratio','age','rooms']]\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "  mvp_df.loc[:,'lstat':], mvp_df.loc[:,'mv'],\n",
+        "    random_state=24601)\n",
+        "\n",
+        "ridge = LinearRegression().fit(X_train, y_train)\n",
+        "print(\"Training set score: {:.3f}\".format(ridge.score(X_train, y_train)))\n",
+        "print(\"Test set score: {:.3f}\".format(ridge.score(X_test, y_test)))\n",
+        "\n",
+        "ridge_predictions = pd.DataFrame(ridge.predict(X_test))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training set score: 0.762\n",
+            "Test set score: 0.721\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-1g9s31-IPsd",
+        "colab_type": "code",
+        "outputId": "aa237b7f-fa0c-4ef0-8585-f3902a64b0d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "source": [
+        "# let's try it with a small C value\n",
+        "ridge = LinearRegression().fit(X_train, y_train)\n",
+        "print(\"Training set score: {:.3f}\".format(ridge.score(X_train, y_train)))\n",
+        "print(\"Test set score: {:.3f}\".format(ridge.score(X_test, y_test)))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training set score: 0.762\n",
+            "Test set score: 0.721\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
