--- a/Strain_Boston_Housing_Assignment4.ipynb
+++ b/Strain_Boston_Housing_Assignment4.ipynb
@@ -890,41 +890,25 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 247
+          "height": 35
         },
-        "outputId": "f592a0c2-ee11-44dc-a2ac-3cf6f138c546"
+        "outputId": "0fc0a1b6-32dc-4889-8a8a-9ab87c97de5a"
       },
       "source": [
-        "std = np.std([tree.feature_importances_ for tree in bst_n_estimators],\n",
-        "             axis=0)\n",
-        "\n",
-        "# Print the feature ranking\n",
-        "print(\"Feature ranking:\")\n",
-        "\n",
-        "for f in range(X_train.shape[1]):\n",
-        "    print(\"%d. feature %d (%f)\" % (f + 1, indices[f], importances[indices[f]]))\n",
-        "\n",
-        "# Plot the feature importances of the forest\n",
-        "plt.figure()\n",
-        "plt.title(\"Feature Importances\")\n",
-        "plt.bar(range(X_train.shape[1]), importances[indices],\n",
-        "       color=\"r\", yerr=std[indices], align=\"center\")\n",
-        "plt.xticks(range(X_train.shape[1]), df.columns[indices], rotation = 'vertical')\n",
-        "plt.xlim([-1, X_train.shape[1]])\n",
-        "plt.show()"
+        "# random forest feature importance\n",
+        "importances = gbrt_best.feature_importances_\n",
+        "indices = np.argsort(importances)[::-1]\n",
+        "print(indices)\n",
+        "# same indices as rforest feature importance - no need to plot again"
       ],
-      "execution_count": 301,
+      "execution_count": 306,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-301-b95235ed3511>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m std = np.std([tree.feature_importances_ for tree in bst_n_estimators],\n\u001b[0m\u001b[1;32m      2\u001b[0m              axis=0)\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Print the feature ranking\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Feature ranking:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'numpy.int64' object is not iterable"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[11  5  0  4  7 10  9  2  6  8  3  1]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
